[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-maya"
version = "0.2.0"
description = "Agentic Maya v1 Python CLI MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
]

[project.scripts]
maya = "maya.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
